# the-culinary-universe

./: .firebaserc  .gitignore  Makefile  README.md  firebase.json  index.html  ingredients.json  package-lock.json  package.json  vite.config.ts
assets/: index-5-r-JBiM.js  index-B7vUZvOL.js  index-CFUTSNnb.css  index-CJzyp65J.js  index-CqgZKEwQ.css  index-Dl1Yh39W.js  index-DlpBAj9H.js  wasm_engine_bg-C2KilhaP.wasm  worker-CWVk4O-4.js
scripts/: download-dataset.py
src/: App.tsx  VectorMath.tsx  alchemyCanvasHelpers.ts  canvas.ts  canvasHelpers.ts  constants.ts  firebase.ts  index.css  math.ts  types.ts  worker.ts
src/__tests__/: FlavorLabBoard.test.tsx  FormulationBoard.test.tsx  alchemical.test.ts  mapSearchParams.test.tsx  math.test.ts  router.test.tsx  urlSync.test.ts
src/components/: AutocompleteDropdown.tsx  ControlsHUD.tsx  FlavorLabBoard.tsx  FormulationBoard.tsx  HeaderHUD.tsx  IngredientChip.tsx  LegendHUD.tsx  RecipeNameInput.tsx  SensoryCardHUD.tsx  SensorySignature.tsx  VectorEquation.tsx  VectorMatchItem.tsx
src/hooks/: useAlchemicalCalculations.ts  useAlchemicalURLSync.ts  useCanvasAnimation.ts  useFlavorLabState.ts  useFormulationState.ts  useIngredientLoader.ts  useMapHighlights.ts  useMapInteraction.ts  useMapSearchParams.ts  useRouter.ts  useVectorMathState.ts  useVectorSearchWorker.ts
src/styles/: map.css  search.css  variables.css
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
