[package]
name = "wasm_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance browser-based KNN flavor vector search engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
